data/derived/sp14/progs/unify/prog4055.ml.out
Characters 28-45:
  let fixpoint (f,b) = wwhile (fun y -> blah,b);;
                              ^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
